# rules_msbuild

./: .bazelrc  .editorconfig  .env  .gitignore  .prettierrc.yml  BUILD  BUILD.bazel  BUILD.release.bazel  Bazel.Props  Bazel.props  Directory.Build.props  Directory.Build.targets  Directory.Solution.props  Directory.Solution.targets  MyRulesDotnet.sln  README.md  ReleaseNotes.md  RulesMSBuild.sln  RulesMSBuild.sln.DotSettings  WORKSPACE  azure-pipelines.yml  deps.bzl  go.mod  go.sum  go_deps.bzl  nuget_targets.xml  test.sh  version.bzl
.azpipelines/: BUILD  azure-pipelines.yml  publish.sh  sandbox-repro.yml  util.bzl
.azpipelines/artifacts/: BUILD.bazel
.buildbuddy/: make_rc.sh  workspace_status.sh
.ci/: init.sh  make_rc.sh  tar.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yaml  slack.yml
config/: BUILD.bazel
docs/: BUILD.bazel  HelloBazel.csproj.dot  HelloBazel.dot  HelloBazel_nuget.dot  HelloBazel_publish.dot  HelloBazel_restore.dot  ImplementationDetails.md  Understanding.md  rules.md  walkthrough.md
dotnet/: BUILD  Rules.vm  core_rules.md  def.bzl  defs.bzl  defs.nuget.bzl  deps.bzl  nuget.md  repositories.bzl  repository_rules.md  toolchain.bzl  toolchains.bzl  toolchains.md  understanding.md  util.bzl
dotnet/private/: BUILD  BUILD.sdk.bazel  NuGet.Build.config  common.bzl  context.bzl  core_macros.bzl  deps.bzl  dotnet_toolchain.bzl  dotnet_wrapper.tpl.sh  msbuild.bzl  msbuild_macros.bzl  nuget.bzl  nuget_macros.bzl  platforms.bzl  providers.bzl  repositories.bzl  sdk.bzl  sdk_urls.bzl  xml.bzl
dotnet/private/actions/: BUILD  assembly.bzl  binary.bzl  common.bzl  fetch.bzl  launcher.bzl  msbuild_assembly.bzl  pack.bzl  pre_restore.bzl  publish.bzl  restore.bzl  tool_binary.bzl  xml.bzl
dotnet/private/launcher/: BUILD  unix.template.sh
dotnet/private/msbuild/: AlternateCommonProps.props  BUILD  Directory.Bazel.props  Directory.Bazel.targets  NuGet.tpl.config  compile.tpl.proj  environment.bzl  nuget.bzl  project.tpl.new.proj  project.tpl.proj  restore.tpl.proj  xml.bzl  xml_util.bzl
dotnet/private/nuget/: BUILD  BUILD.fake.bazel  BUILD.package.tpl.bazel  BUILD.tpl.bazel  environment.bzl  fake_rules.bzl  query_nuget_deps.sh  repository.bzl  rules.bzl
dotnet/private/rules/: BUILD  Docs.vm  binary.bzl  common.bzl  compile.tpl.proj  context.bzl  core.bzl  defs.docs.bzl  directory.bzl  library.bzl  msbuild.bzl  nuget.bzl  nuget_deps.tpl.props  nuget_download.bzl  nuget_fetch.tpl.proj  nuget_restore.tpl.proj  restore.tpl.proj  restore.tpl.props  sdk.bzl
dotnet/private/toolchain/: BUILD  BUILD.nuget.bazel  BUILD.nuget_import.bazel  BUILD.sdk.bazel  common.bzl  dotnet_toolchain.bzl  nuget.bzl  sdk.bzl  sdk_urls.bzl
dotnet/private/util/: relased.bzl  relased.release.bzl
dotnet/toolchain/: BUILD  toolchains.bzl
dotnet/tools/Bzl/: BUILD.bazel  BUILD.root.tpl.bazel  BuildReader.cs  Bzl.csproj  Files.cs  Program.cs  Readme.md  SamHowes.Bzl.csproj  Templates.cs  Util.cs  WORKSPACE.tpl  WorkspaceMaker.cs  XmlMerger.cs
dotnet/tools/bazel_testing/: BUILD.bazel  BazelRunner.cs  PosixPath.cs  Program.cs  TestLogger.cs  TestRunner.cs  TestRunner.csproj  bazel_integration_test.bzl
dotnet/tools/launcher/: BUILD  BUILD.bazel  BUILD.release.bazel  data_parser.go  data_parser_test.go  dotnet_launcher.cc  dotnet_launcher.go  dotnet_launcher.h  launch.bzl  launcher_main.cc  launcher_main.go  runfiles.go  runfiles_test.go  unix.template.sh
e2e/: BUILD  test.bzl
e2e/bzl_init/: WORKSPACE  bzl_init.sln
e2e/hello/: BUILD.bazel  WORKSPACE  test_external.sh
e2e/hello/Binary/: BUILD.bazel  Binary.csproj  Program.cs
e2e/hello/Console/: BUILD.bazel
e2e/hello/RunfilesTest/: BUILD.bazel  Program.cs  RunfilesTest.csproj
e2e/hello/runfiles/: BUILD.bazel  Program.cs
eng/: graph.sh  install_bzl.sh  release.sh  tar.sh  test.sh  test_release.sh  update_deleted.sh  util.bzl
eng/docs/: BUILD.bazel  Program.cs  docs.csproj
eng/release/: BUILD.bazel  Program.cs  Util.cs  release.csproj
eng/tar/: BUILD.bazel  Program.cs  tar.csproj
extras/ide/: BUILD  Bazel.props  Bazel.targets  Directory.Build.props  Directory.Build.targets  Directory.Solution.props  Directory.Solution.targets  test.sh  testprops.proj
gazelle/: BUILD.bazel
gazelle/dotnet/: BUILD  Readme.md  Readme.vm  configure.go  gazelle.go  gazelle_test.go  generate.go  project.go  (+2 more)
gazelle/dotnet/project/: BUILD.bazel  methods.go  model.go  nuget.go  translation.go
gazelle/dotnet/util/: BUILD.bazel  bzl.go
tests/: BUILD  Readme.md  bootstrap.sh  hello_test.sh  runall.sh
tests/dotnet/tools/BzlTests/: BUILD.bazel  BzlTests.csproj  WORKSPACE.FAKE.tpl  WorkspaceMakerTests.cs
tests/dotnet/tools/BzlTests/testdata/simple/: WORKSPACE.match  WORKSPACE.out
tests/dotnet/tools/BzlTests/testdata/simple/cs/: Bazel.props.match  simple.sln
tests/dotnet/tools/BzlTests/testdata/simple/cs/binary/: BUILD.bazel  binary.csproj
tests/dotnet/tools/BzlTests/testdata/update_props/: Bazel.props.out  Bazel.targets.in  Bazel.targets.out  Directory.Build.props.out  Directory.Build.targets.in  Directory.Build.targets.out  Directory.Solution.props.in  Directory.Solution.props.out
tests/dotnet/tools/BzlTests/testdata/update_workspace/: WORKSPACE.in  WORKSPACE.out
tests/dotnet/tools/NuGetParserTests/: AssetsReaderTests.cs  BUILD.bazel  NuGetParserTests.csproj  ParserTests.cs  project.assets.template.json
tests/examples/BuildProperties/: BUILD.bazel  BuildProperties.csproj  Class1.cs  build_properties_test.go
tests/examples/HelloWeb/: BUILD.bazel  Program.cs  Readme.md  Startup.cs  appsettings.json  run_publish_test.go
tests/examples/HelloWeb/Properties/: launchSettings.json
tests/tools/lib/: BUILD.bazel
tests/versions/net50/: BUILD.bazel  Program.cs  net50.csproj
tests/versions/net60/: BUILD.bazel  Program.cs
tests/versions/netcoreapp31/: BUILD.bazel  Program.cs
tests/versions/netstandard21/: BUILD.bazel  Class1.cs
tools/: BUILD.bazel  BUILD.release.bazel  gazelle.bzl  gazelle.sh
tools/stardoc/: Readme.md  stardoc.bzl
tools/stardoc/templates/: rule.vm
(+339 files in other folders)
