load("//dotnet:defs.bzl", "msbuild_directory")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

msbuild_directory()

# gazelle:prefix github.com/samhowes/rules_msbuild
gazelle(
    name = "gazelle_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps/go_deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

GO_ARGS = [
    "-go_naming_convention=import",
]

DOTNET_ARGS = [
    "--deps_macro=deps/nuget.bzl%nuget_deps",
    "--srcs_mode=explicit",
]

# for when the dotnet language is broken
gazelle(
    name = "gazelle_go",
    args = GO_ARGS,
)

gazelle(
    name = "gazelle",
    args = DOTNET_ARGS + GO_ARGS,
    gazelle = ":gazelle_local",
)

gazelle_binary(
    name = "gazelle_local",
    languages = DEFAULT_LANGUAGES + [
        "//gazelle/dotnet",
    ],
)

gazelle(
    name = "gazelle-dotnet",
    args = DOTNET_ARGS,
    gazelle = "//gazelle/dotnet:gazelle-dotnet",
)

genrule(
    name = "tar",
    srcs = [],
    outs = ["release.tar"],
    cmd = "$(location :eng/tar.sh) $@",
    exec_tools = ["eng/tar.sh"],
)

filegroup(
    name = "release",
    srcs = ["tmp/rules_msbuild-0.0.1.tar.gz"],
    visibility = ["//:__subpackages__"],
)
