load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//:version.bzl", "VERSION")

# gazelle:prefix github.com/samhowes/rules_msbuild
gazelle(
    name = "gazelle_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps/go_deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

GO_ARGS = [
    "-go_naming_convention=import",
]

DOTNET_ARGS = [
    "--deps_macro=deps:nuget.bzl%nuget_deps",
    "--srcs_mode=explicit",
]

# for when the dotnet language is broken
gazelle(
    name = "gazelle_go",
    args = GO_ARGS,
)

gazelle(
    name = "gazelle",
    args = DOTNET_ARGS + GO_ARGS,
    gazelle = ":gazelle_local",
)

gazelle_binary(
    name = "gazelle_local",
    languages = DEFAULT_LANGUAGES + [
        "//gazelle/dotnet",
    ],
)

gazelle(
    name = "gazelle-dotnet",
    args = DOTNET_ARGS,
    gazelle = "//tools:gazelle-dotnet",
)

genrule(
    name = "tar",
    srcs = [],
    outs = [
        "rules_msbuild.tar.gz",
        "rules_msbuild.tar.gz.sha256",
    ],
    cmd = "$(location //eng/tar) $(OUTS)",
    exec_tools = ["//eng/tar"],
    tags = ["local"],
    visibility = ["//:__subpackages__"],
)
