load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@bazel_skylib//lib:shell.bzl", "shell")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//dotnet:defs.bzl", "msbuild_directory")
load("//:version.bzl", "VERSION")

msbuild_directory(
    name = "msbuild_defaults",
    srcs = [
        "Bazel.props",
        "Directory.Build.props",
        "Directory.Build.targets",
        "Directory.Solution.props",
        "Directory.Solution.targets",
    ],
    deps = ["//extras/ide:msbuild_defaults"],
)

# gazelle:prefix github.com/samhowes/rules_msbuild
gazelle(
    name = "gazelle_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps/go_deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

GO_ARGS = [
    "-go_naming_convention=import",
]

DOTNET_ARGS = [
    "--deps_macro=deps:nuget.bzl%nuget_deps",
    "--srcs_mode=explicit",
]

# for when the dotnet language is broken
gazelle(
    name = "gazelle_go",
    args = GO_ARGS,
)

gazelle(
    name = "gazelle",
    args = DOTNET_ARGS + GO_ARGS,
    gazelle = ":gazelle_local",
)

gazelle_binary(
    name = "gazelle_local",
    languages = DEFAULT_LANGUAGES + [
        "//gazelle/dotnet",
    ],
)

gazelle(
    name = "gazelle-dotnet",
    args = DOTNET_ARGS,
    gazelle = "//tools:gazelle-dotnet",
)

PACKAGES = [
    "//dotnet/tools/Runfiles:Runfiles.nupkg",
]

genrule(
    name = "tar",
    srcs = PACKAGES,
    outs = [
        "rules_msbuild.tar.gz",
        "rules_msbuild.tar.gz.sha256",
    ],
    cmd = " ".join([
        "$(location //eng/tar)",
        " --tar=" + shell.quote("$(OUTS)"),
        "--packages=" + ",".join(["$(location %s)" % p for p in PACKAGES]),
    ]),
    exec_tools = ["//eng/tar"],
    tags = ["local"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)
