load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "mode",
    build_setting_default = "build",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "release",
    flag_values = {
        ":mode": "release",
    },
)

config_setting(
    name = "debug_launcher",
    flag_values = {
        ":mode": "debug_launcher",
    },
)
