load("@my_rules_dotnet//dotnet/private/rules:binary.bzl", "dotnet_tool_binary")
load("@my_rules_dotnet//dotnet/private/rules:sdk.bzl", "package_list")
load("@my_rules_dotnet//dotnet:def.bzl", "declare_toolchains", "dotnet_sdk")

package(default_visibility = ["//visibility:public"])

dotnet_sdk(
    name = "dotnet_sdk",
    dotnetos = "{dotnetos}",
    dotnetarch = "{dotnetarch}",
    root_file = "ROOT", 
    sdk_root = "sdk/{version}",
    dotnet = "dotnet{exe}", 
)

package_list(
    name = "package_list",
    srcs = [":srcs"], #todo remove this?
    root_file = "ROOT", #todo root?
    out = "packages.txt", #todo figure out for dotnet
)

declare_toolchains(
    host = "{dotnetos}_{dotnetarch}", #todo fix this path?
    sdk = ":dotnet_sdk",
    # builder = ":builder", # todo remove this?
)

