load("@my_rules_dotnet//dotnet:defs.bzl", "declare_toolchains", "dotnet_sdk")

package(default_visibility = ["//visibility:public"])

declare_toolchains(
    host = "{dotnetos}_{dotnetarch}", #todo fix this path?
    sdk = ":dotnet_sdk",
)

dotnet_sdk(
    name = "dotnet_sdk",
    dotnetos = "{dotnetos}",
    dotnetarch = "{dotnetarch}",
    dotnet = "dotnet{exe}",
    root_file = "ROOT", 
    sdk_root = "sdk/{version}",
    sdk_files = ":sdk_files",
    fxr = ":fxr",
    shared = ":shared",
    packs = [
{pack_labels}
    ]
)

filegroup(
    name = "sdk_files",
    # todo: process this glob better
    # there are miscellaneous parts of the sdk that are unrelated
    # like tests, FSharp, roslyn, resources, etc
    srcs = glob(["sdk/{version}/**/*"]), 
)

filegroup(
    name = "fxr",
    srcs = glob(["host/fxr/**/*"]), # not multi-version safe
)

# not multi-version safe
{dynamics}
