load("@my_rules_dotnet//dotnet:defs.bzl", "declare_toolchains", "dotnet_sdk")

package(default_visibility = ["//visibility:public"])

declare_toolchains(
    host = "{dotnetos}_{dotnetarch}",  #todo fix this path?
    sdk = ":dotnet_sdk",
)

dotnet_sdk(
    name = "dotnet_sdk",
    dotnet = "dotnet{exe}",
    dotnetarch = "{dotnetarch}",
    dotnetos = "{dotnetos}",
    fxr = ":fxr",
    init_files = ":init_files",
    nuget_build_config = ".nuget/NuGet.Build.config",
    packs = [
        {pack_labels},
    ],
    root_file = "ROOT",
    sdk_files = ":sdk_files",
    sdk_root = "sdk/{version}",
    shared = ":shared",
)

# init files so dotnet doesn't print welcome messages
# included because bazel sandboxes these away
filegroup(
    name = "init_files",
    srcs = glob([".dotnet/**/*"], allow_empty=False),
)

filegroup(
    name = "sdk_files",
    # todo: process this glob better
    # there are miscellaneous parts of the sdk that are unrelated
    # like tests, FSharp, roslyn, resources, etc
    srcs = glob(["sdk/{version}/**/*"]),
)

filegroup(
    name = "fxr",
    srcs = glob(["host/fxr/**/*"]),  # not multi-version safe
)

# not multi-version safe
{dynamics}
