load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")
load("//eng:util.bzl", "expand")

DOCS = [
    "//dotnet/private/rules:docs",
]

msbuild_binary(
    name = "docs",
    srcs = ["Program.cs"],
    args = expand(DOCS),
    data = DOCS,
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = ["//dotnet/tools/Runfiles"],
)
