load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "release",
    srcs = [
        "Program.cs",
        "Util.cs",
    ],
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl:SamHowes.Bzl",
        "//dotnet/tools/Runfiles",
        "@nuget//Newtonsoft.Json",
    ],
)
