load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "release",
    srcs = [
        "Program.cs",
        "Util.cs",
    ],
    target_framework = "net6.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl",
        "//dotnet/tools/Runfiles",
        "//dotnet/tools/bazel_testing:TestRunner",
        "@nuget//Newtonsoft.Json",
    ],
)
