load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "tar",
    srcs = ["Program.cs"],
    data = [
        "//dotnet/tools/launcher",
        "//tools:gazelle-dotnet",
    ],
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl:SamHowes.Bzl",
        "//dotnet/tools/Runfiles",
        "@nuget//Newtonsoft.Json",
        "@nuget//SharpZipLib",
    ],
)
