load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")
load("//eng:util.bzl", "expand")

msbuild_binary(
    name = "tar",
    srcs = ["Program.cs"],
    data = [
        "//dotnet/tools/launcher",
        "//tools:gazelle-dotnet",
    ],
    target_framework = "net6.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl",
        "//dotnet/tools/Runfiles",
        "@nuget//Newtonsoft.Json",
        "@nuget//SharpZipLib",
    ],
)
