load("@my_rules_dotnet//dotnet/private/nuget:fake_rules.bzl", "fake_nuget_import")
package(default_visibility = ["//visibility:public"])

# This is a fake BUILD file, it is temporary. 
# It is used to produce a valid analysis state for bazel, but does not actually import any packages
# because no packages can be downloaded yet. @{repo_name}//:bootstrapper must be run to compute the 
# nuget dependency graph given the frameworks that target the nuget packages.
#
# Once a restore is successful, this file will be overwritten with a BUILD file that actually imports
# the nuget packages

fake_nuget_import(
    name = "{name}"
)
