load("@my_rules_dotnet//dotnet/private/rules:nuget.bzl", "tfm_mapping")

package(default_visibility = ["//visibility:public"])

tfm_mapping(
    name = "tfm_mapping",
    tfm_mapping = {tfm_mapping},
)

alias(
    name = "test_logger",
    actual = "//{test_logger}",
)

exports_files(["{nuget_build_config}"])

# this file list looks pretty crazy, but because we list every file specifically, bazel doesn't have to perform a glob
# of the file system and read the packages directory itself.
exports_files({file_list})
