load("@my_rules_dotnet//dotnet:defs.bzl", "declare_toolchains", "dotnet_sdk", "dotnet_tool_binary", "dotnet_config")

package(default_visibility = ["//visibility:public"])

# https://docs.microsoft.com/en-us/dotnet/core/distribution-packaging

declare_toolchains(
    host = "{dotnetos}_{dotnetarch}",
    sdk = ":dotnet_sdk",
    builder = ":builder",
)

dotnet_sdk(
    name = "dotnet_sdk",
    all_files = ":all_files",
    dotnet = "dotnet{exe}",
    dotnetarch = "{dotnetarch}",
    dotnetos = "{dotnetos}",
    fxr = ":fxr",
    init_files = ":init_files",
    packs = [
        {pack_labels},
    ],
    root_file = "ROOT",
    sdk_files = ":sdk_files",
    sdk_root = "sdk/{version}",
    shared = {shared},
    config = ":dotnet_config",
)

dotnet_config(
    name = "dotnet_config",
    trim_path = "{trim_path}",
    nuget_config = "{nuget_config}",
    tfm_mapping = "{tfm_mapping}",
    test_logger = "@{nuget_repo}//:test_logger",
)

dotnet_tool_binary(
    name = "builder",
    srcs = ["@my_rules_dotnet//dotnet/tools/builder:builder_srcs"],
    target_framework = "netcoreapp3.1",
    dotnet_sdk = ":dotnet_sdk"
)

filegroup(
    name = "all_files",
    srcs = [
        "dotnet{exe}",
        ":fxr",
        ":init_files",
        ":sdk_files",
        {dynamic_targets}
    ],
)

# init files so dotnet doesn't print welcome messages
# included because bazel sandboxes these away
filegroup(
    name = "init_files",
    srcs = [
        "{init_files}",
    ],
)

filegroup(
    name = "sdk_files",
    # todo: process this glob better
    # there are miscellaneous parts of the sdk that are unrelated
    # like tests, FSharp, roslyn, resources, etc
    srcs = glob(["sdk/{version}/**/*"]),
)

filegroup(
    name = "fxr",
    srcs = glob(["host/fxr/**/*"]),  # not multi-version safe
)

# not multi-version safe
{dynamics}
