load("@my_rules_dotnet//dotnet:defs.bzl", "declare_toolchains", "dotnet_config", "dotnet_sdk", "msbuild_tool_binary")

package(default_visibility = ["//visibility:public"])

# https://docs.microsoft.com/en-us/dotnet/core/distribution-packaging

declare_toolchains(
    builder = ":builder",
    host = "{dotnetos}_{dotnetarch}",
    sdk = ":dotnet_sdk",
)

exports_files([
    "Directory.Bazel.props",
    "Directory.Bazel.targets",
])

dotnet_sdk(
    name = "dotnet_sdk",
    bazel_props = ":Directory.Bazel.props",
    config = ":dotnet_config",
    dotnet = ":dotnet",
    dotnetarch = "{dotnetarch}",
    dotnetos = "{dotnetos}",
    fxr = ":fxr",
    home_dir = ".dotnet",
    major_version = {major_version},
    packs = "packs",
    root_file = "ROOT",
    sdk_root = "sdk/{version}",
    shared = "shared",
)

dotnet_config(
    name = "dotnet_config",
    nuget_config = "{nuget_config}",
    test_logger = "@{nuget_repo}//:test_logger",
    tfm_mapping = "{tfm_mapping}",
    trim_path = "{trim_path}",
)

msbuild_tool_binary(
    name = "builder",
    srcs = ["@my_rules_dotnet//dotnet/tools/builder:builder_srcs"],
    dotnet_sdk = ":dotnet_sdk",
    target_framework = "{builder_tfm}",
    project_file = "@my_rules_dotnet//dotnet/tools/builder:Builder.csproj",
    deps = [
        "{builder_deps}"
    ]
)

filegroup(
    name = "fxr",
    srcs = glob(["host/fxr/**/*"]),  # not multi-version safe
)

# not multi-version safe
{dynamics}
