load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")
load("//:version.bzl", "VERSION")

exports_files(["WORKSPACE.tpl"])

filegroup(
    name = "gazelle-dotnet",
    srcs = select({
        "//config:release": ["//.azpipelines/artifacts:gazelle-dotnet"],
        "//conditions:default": ["//gazelle/dotnet:gazelle-dotnet"],
    }),
)

msbuild_binary(
    name = "SamHowes.Bzl",
    srcs = [
        "BuildReader.cs",
        "Files.cs",
        "Program.cs",
        "Templates.cs",
        "WorkspaceMaker.cs",
        "XmlMerger.cs",
    ],
    data = [
        "BUILD.root.tpl.bazel",
        "WORKSPACE.tpl",
        ":gazelle-dotnet",
        "//extras/ide",
    ],
    packable = True,
    target_framework = "netcoreapp3.1",
    version = VERSION,
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/NuGetParser",
        "//dotnet/tools/Runfiles",
    ],
)
