load("@rules_msbuild//dotnet:defs.bzl", "msbuild_directory")
load("@rules_msbuild//tools:gazelle.bzl", "gazelle")

msbuild_directory(
    name = "msbuild_defaults",
    visibility = ["//:__subpackages__"],
)

gazelle(
    name = "gazelle",
    args = [
        "--deps_macro=deps/nuget.bzl%nuget_deps",
        "--srcs_mode=explicit",
    ],
)
