load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "TestRunner",
    srcs = [
        "PosixPath.cs",
        "Program.cs",
        "TestLogger.cs",
        "TestRunner.cs",
    ],
    project_file = "TestRunner.csproj",
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl",
        "//dotnet/tools/Runfiles",
        "//dotnet/tools/builder:Builder",
    ],
)
