load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "TestRunner",
    srcs = [
        "BazelRunner.cs",
        "PosixPath.cs",
        "Program.cs",
        "TestLogger.cs",
        "TestRunner.cs",
    ],
    project_file = "TestRunner.csproj",
    target_framework = "net5.0",
    visibility = ["//visibility:public"],
    deps = [
        "//dotnet/tools/Bzl:SamHowes.Bzl",
        "//dotnet/tools/Runfiles",
        "//dotnet/tools/builder:Builder",
    ],
)
