package(default_visibility = ["//visibility:public"])

filegroup(
    name = "launcher",
    srcs = select({
        "@bazel_tools//src/conditions:host_windows": [":launcher_windows"],
        "//conditions:default": [
            ":launcher_unix",
        ],
    }),
)

filegroup(
    name = "launcher_unix",
    srcs = ["unix.template.sh"],
    data = ["@bazel_tools//tools/bash/runfiles"],
)

filegroup(
    name = "launcher_windows",
    srcs = ["//.azpipelines/artifacts:windows-amd64/launcher_windows.exe"],
)
