load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "RunfilesTest",
    srcs = ["Program.cs"],
    data = ["foo.txt"],
    target_framework = "netcoreapp3.1",
    visibility = ["//visibility:public"],
    deps = [
        "@rules_msbuild//dotnet/tools/Runfiles",
    ],
)
