load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "project",
    srcs = [
        "methods.go",
        "model.go",
    ],
    importpath = "github.com/samhowes/my_rules_dotnet/gazelle/dotnet/project",
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//label:go_default_library"],
)
