load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:go_naming_convention_external go_default_library

go_library(
    name = "project",
    srcs = [
        "methods.go",
        "model.go",
        "nuget.go",
        "translation.go",
    ],
    importpath = "github.com/samhowes/rules_msbuild/gazelle/dotnet/project",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/dotnet/util",
        "@bazel_gazelle//label:go_default_library",  # keep
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",  # keep
        "@com_github_bmatcuk_doublestar//:go_default_library",
    ],
)
