load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("//tests/tools/build_test:build_test.bzl", "build_test")
load("@rules_msbuild//dotnet:defs.bzl", "msbuild_binary")

msbuild_binary(
    name = "HelloWeb",
    srcs = [
        "Program.cs",
        "Startup.cs",
    ],
    content = [
        "appsettings.Development.json",
        "appsettings.json",
    ] + glob(["wwwroot/**"]),
    data = glob(["wwwroot/**"]),
    project_file = "HelloWeb.csproj",
    target_framework = "netcoreapp3.1",
    visibility = ["//visibility:public"],
)

build_test(
    name = "HelloWeb_test",
    expected_files = {
        "netcoreapp3.1": [
            "appsettings.json",
            "appsettings.Development.json",
        ],
    },
    expected_output = "The special value is: 42!\n",
    run_location = "standard",
)

build_test(
    name = "HelloWeb_publish_test",
    expected_files = {
        "publish/netcoreapp3.1": [
            "appsettings.json",
            "appsettings.Development.json",
            "HelloWeb.deps.json",
            "HelloWeb.dll",
            "HelloWeb.pdb",
            "HelloWeb.runtimeconfig.json",
            "web.config",
        ],
        "publish/netcoreapp3.1/wwwroot": [
            "foo.txt",
        ],
    },
)

go_test(
    name = "run_publish_test",
    size = "small",
    srcs = ["run_publish_test.go"],
    data = [
        ":HelloWeb_publish",
        "@dotnet_sdk//:dotnet",
    ],
    deps = [
        "//tests/tools/executable",
        "//tests/tools/files",
    ],
)
