load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    testonly = True,
    srcs = ["check_executable.go"],
    importpath = "github.com/samhowes/my_rules_dotnet/tests/tools/lib",
    visibility = ["//tests:__subpackages__"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_x_sys//execabs",
    ],
)
